
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SIZE ;
 char* ascistr ;
 int checkstatus (int ) ;
 int cmdbuf ;
 int memset (int ,int ,int ) ;
 int readbuf (int *,int ,int ,int ) ;
 int sendbuf (int ,int ,int) ;
 int sockfd ;
 int sprintf (int ,char*,char*) ;
 int srvbuf ;

void setascii()
{
    int j;

    memset(cmdbuf,0,SIZE);
    j=sprintf(cmdbuf,"%s\r\n",ascistr);
    sendbuf(sockfd,cmdbuf,j);
    readbuf(((void*)0),sockfd,srvbuf,SIZE);
    checkstatus(srvbuf);

}
